# FireANTs

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  autocopyright.py  pyproject.toml  pytest.ini  run_distributed_tests.sh  run_tests.sh  setup.py  test.py  zip_code_files.py
.cursor/rules/: conda-environment.mdc
.github/workflows/: publish.yml  publish_fusedops.yml  test.yml
benchmarks/: affine_cc.py  affine_mse.py  greedy_cc.py  greedy_mi.py
cli/: README.md  __init__.py  fireantsRegistration.py
cudants/: types.py
cudants/io/: __init__.py  image.py
cudants/losses/: __init__.py  cc.py  mi.py  mse.py
cudants/notebooks/: Check neurite and normal OASIS version.ipynb  Plot supplementary diffeo.ipynb  Plot timings for brain datasets.ipynb  Test gradients from autodiff.ipynb  Test registration pipeline.ipynb  Test rigid affine registration.ipynb  (+5 more)
docker/: Dockerfile  Dockerfile-cu118  README.md
docs/: mkdocs.yml  requirements.txt
fireants/: __init__.py  types.py
fused_ops/: README.md  logs.txt  pyproject.toml  setup.py
fused_ops/include/: CrossCorrelation.h  FusedGenerateGrid.h  FusedGridComposer.h  FusedGridSampler.h  FusedGridSamplerGenericLabel.h  GaussianBlurFFT.h  MutualInformation.h  common.h
fused_ops/ops/: baseline_grid_sampler.py  fusedcc.py  fusedgridsampler.py
fused_ops/src/: AdamUtils.cu  CrossCorrelation.cu  FusedGenerateGrid.cu  FusedGridComposer.cu  FusedGridSampler.cu  FusedGridSamplerGenericLabel.cu  GaussianBlurFFT.cu  MutualInformation.cu  src.cpp
fused_ops/tests/: manual_test_fusedsampler_mem.py  test_crosscorrelation.py  test_fusedsampler.py
scripts/: fireantsRegistration  test_fusedops_import_from_pypi.sh  update_versions_and_changelog.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_advanced_features.py  test_ants_compatibility.py  test_basic_registration.py  test_cc_kernel_size_list.py  test_cross_correlation.py  test_deformable_registration.py  test_diffeomorphic_properties.py  test_distributed_greedy.py  test_fused_lncc_backend.py  test_fusedops_affinewarp.py  test_fusedops_crosscorrelation.py  test_fusedops_crosscorrelation_2d.py  test_fusedops_gridsample.py  test_fusedops_gridsample_genericlabel.py  test_fusedops_mutualinfo.py  test_fusedops_warpcompose.py  test_fusedops_warpcompose_2d.py  test_image_io.py  test_keypoint_fidelity.py  test_keypoints.py  test_legacy_vs_quart_rigid.py  test_lite_lncc_backend.py  test_lowdim.py  test_masked_greedy_fidelity.py  test_masked_greedy_fidelity_3d.py  test_moments_registration.py  test_moments_scaling.py  test_optimizer_comparison.py  test_parallel_state.py  test_precision_and_multiscale.py  test_ring_sampler.py
tutorials/: [Tutorial 1] Basic Usage.ipynb  [Tutorial 2] Custom loss functions.ipynb  tutorial1_basic_usage.py
(+196 files in other folders)
