[project]
name = "fireants"
version = "1.0.0"
authors = [
    {name="Rohit Jena"},
    {name="Pratik Chaudhari"},
    {name="James C. Gee"}
]
description = "FireANTs: Adaptive Riemannian Optimization for Multi-Scale Diffeomorphic Registration"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch>=2.3.0",
    "SimpleITK==2.2.1", 
    "nibabel",
    "numpy", "scipy", "scikit-image", "matplotlib",
    "typing", "tqdm", "pandas", "hydra-core",
    "pytest"
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["docker*", "notepad*", "fused_ops*", "tutorials*"]

[tool.hatch.build.targets.wheel]
packages = ["fireants"]
